# Uruk-Store

./: .gitignore  1.txt  CMakeLists.txt  UrukStore  UrukStore.db  callgrind.out.9170  massif.out.27900  massif.out.28034  readme.md
Headers/: Startup.h
Headers/Base/: Component.h  IDatabaseCurd.h  Page.h  Window.h
Headers/Component/: AppBox.h
Headers/Database/: Sqlite.h  SqliteCurd.h
Headers/Helper/: Apt.h  AptCatagoriesMap.h  AptContext.h  FileMethod.h  GtkAutoComplete.h  Variety.h
Headers/Pages/: HomePage.h  MainWindow.h
Source/: Startup.cpp  main.cpp
Source/Base/: Component.cpp  Page.cpp  Window.cpp
Source/Component/: AppBox.cpp
Source/Database/: SqliteCurd.cpp
Source/Helper/: Apt.cpp  AptContext.cpp  FileMethod.cpp  GtkAutoComplete.cpp  ShellMethod.cpp  StringMethod.cpp  Variety.cpp
Source/Pages/: HomePage.cpp  MainWindow.cpp
Ui/Assets/Css/: MainWindow.css
Ui/Pages/: AppBox.glade  AppBox.glade~  HomePage.glade  HomePage.glade~  MainWindow.glade  MainWindow.glade~
